--- a/src/index.html
+++ b/src/index.html
@@ -14,8 +14,11 @@
         <script src="assets/js/uikit.min.js"></script>
         <script src="assets/js/jquery-1.9.1.min.js"></script>
         <script src="assets/js/jssor.slider.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/ua-parser-js@0/dist/ua-parser.min.js"></script>
+        <script src="assets/js/map.js"></script>
+        
 </head>
-<body>
+<body style="background-color: rgb(61,61,61)">
   <app-root></app-root>
 </body>
 </html>
