--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
         <script src="assets/js/jssor.slider.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/ua-parser-js@0/dist/ua-parser.min.js"></script>
         <script src="assets/js/map.js"></script>
+        <script src="assets/js/plane.js"></script>
         
 </head>
 <body style="background-color: rgb(61,61,61)">
