--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <meta name="description" content="Caitlin Bales and Darin Russell's wedding website for November 2nd 2019 in Lincoln, NE">
   <title>Caitlin &amp; Darin's Wedding</title>
   <base href="/">
 
