--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" type="image/x-icon" href="favicon.ico">
         <link rel="stylesheet" href="assets/css/uikit.min.css" />
+        <link rel="stylesheet" href="assets/css/dropzone.css" />
         <!-- <link rel="stylesheet" href="assets/css/site.css" /> -->
         <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
         <script src="assets/js/uikit-icons.min.js"></script>
@@ -18,6 +19,8 @@
         <script src="https://cdn.jsdelivr.net/npm/ua-parser-js@0/dist/ua-parser.min.js"></script>
         <script src="assets/js/map.js"></script>
         <script src="assets/js/plane.js"></script>
+        <script src="assets/js/dropzone.js"></script>
+        <script src="assets/js/gallery.js"></script>
         
 </head>
 <body style="background-color: rgb(61,61,61)">
