--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,16 @@
         <script src="assets/js/plane.js"></script>
         <script src="assets/js/dropzone.js"></script>
         <script src="assets/js/gallery.js"></script>
+
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-88240407-3"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+
+          gtag('config', 'UA-88240407-3');
+        </script>
         
 </head>
 <body style="background-color: rgb(61,61,61)">
