Fix navigation transparency

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="description" content="Caitlin Bales and Darin Russell's wedding website for November 2nd 2019 in Lincoln, NE">
-  <title>Caitlin &amp; Darin's Wedding</title>
+  <title>Caitlin &amp; Darin's Wedding Website</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
