Defer js resources

--- a/src/index.html
+++ b/src/index.html
@@ -9,19 +9,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" type="image/x-icon" href="favicon.ico">
         <link rel="stylesheet" href="assets/css/uikit.min.css" />
-        <link rel="stylesheet" href="assets/css/dropzone.css" />
+        <link rel="stylesheet" href="assets/css/dropzone.min.css" />
         <!-- <link rel="stylesheet" href="assets/css/site.css" /> -->
         <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
-        <script src="assets/js/uikit-icons.min.js"></script>
-        <script src="assets/js/uikit.min.js"></script>
-        <script src="assets/js/jquery-1.9.1.min.js"></script>
-        <script src="assets/js/jssor.slider.min.js"></script>
+        <script defer src="assets/js/uikit-icons.min.js"></script>
+        <script defer src="assets/js/uikit.min.js"></script>
+        <script defer src="assets/js/jquery-1.9.1.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/ua-parser-js@0/dist/ua-parser.min.js"></script>
-        <script src="assets/js/map.js"></script>
-        <script src="assets/js/plane.js"></script>
-        <script src="assets/js/dropzone.js"></script>
-        <script src="assets/js/gallery.js"></script>
-
         <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=UA-88240407-3"></script>
         <script>
@@ -35,5 +29,10 @@
 </head>
 <body style="background-color: rgb(61,61,61)">
   <app-root></app-root>
+  <script src="assets/js/map.js"></script>
+  <script src="assets/js/plane.js"></script>
+  <script src="assets/js/dropzone.js"></script>
+  <script src="assets/js/gallery.js"></script>
+  <script src="assets/js/jssor.slider.min.js"></script>
 </body>
 </html>
