--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
+        <script src="assets/js/jquery-1.9.1.min.js"></script>
         <link rel="icon" type="image/x-icon" href="favicon.ico">
         <link rel="stylesheet" href="assets/css/uikit.min.css" />
         <link rel="stylesheet" href="assets/css/dropzone.min.css" />
@@ -14,7 +15,7 @@
         <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
         <script defer src="assets/js/uikit-icons.min.js"></script>
         <script defer src="assets/js/uikit.min.js"></script>
-        <script defer src="assets/js/jquery-1.9.1.min.js"></script>
+        
         <script src="https://cdn.jsdelivr.net/npm/ua-parser-js@0/dist/ua-parser.min.js"></script>
         <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=UA-88240407-3"></script>
